subscription get handler
