# src/docs/swagger.json
@@ -1,15 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API documentation for SuperApp",
-        "title": "SuperApp API",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1",
     "paths": {
-        "/health": {
+        "/healthcheck": {
             "get": {
                 "description": "Checks if the application and database are running",
                 "consumes": [
@@ -19,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Health"
+                    "HealthCheck"
                 ],
                 "summary": "Health Check",
                 "responses": {
@@ -31,6 +26,87 @@
                         "description": "Service Unavailable",
                         "schema": {}
                     }
+                }
+            }
+        },
+        "/subscription": {
+            "get": {
+                "description": "Returns list of subscriptions with pagination",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Subscriptions"
+                ],
+                "summary": "Get subscriptions",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Subscription"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Subscription": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string",
+                    "example": "2026-01-01T12:00:00Z"
+                },
+                "end_date": {
+                    "type": "string",
+                    "example": "2026-12-31"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
+                "price": {
+                    "type": "integer",
+                    "example": 1999
+                },
+                "service_name": {
+                    "type": "string",
+                    "example": "Netflix"
+                },
+                "start_date": {
+                    "type": "string",
+                    "example": "2026-01-01"
+                },
+                "user_id": {
+                    "type": "string",
+                    "example": "60601fee-2bf1-4721-ae6f-7636e79a0cba"
                 }
             }
         }
